--- a/FirstApp/angular-front/src/app/app.component.html
+++ b/FirstApp/angular-front/src/app/app.component.html
@@ -14,7 +14,7 @@
                         <a class="nav-link pe-3 me-4 fw-bold" href="/person/">Persons</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pe-3 me-4 fw-bold" href="#">History</a>
+                        <a class="nav-link pe-3 me-4 fw-bold" href="/reactiveform">ReactiveForm</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pe-3 me-4 fw-bold" href="#">About Us</a>
