--- a/FirstApp/angular-front/src/app/app.component.html
+++ b/FirstApp/angular-front/src/app/app.component.html
@@ -1,27 +1,27 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid pe-lg-2 p-0">
-            <a class="navbar-brand fw-bold fs-3" href="#">PERSONs</a>
+            <a class="navbar-brand fw-bold fs-3" href="/">PERSONs</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link pe-3 me-4 fw-bold active" aria-current="page" href="/">Home</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link pe-3 me-4 fw-bold" href="/person/">Persons</a>
+                        <a class="nav-link pe-3 me-4 fw-bold" href="/person/">AllInOneForm</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pe-3 me-4 fw-bold" href="/reactiveform">ReactiveForm</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link pe-3 me-4 fw-bold" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pe-3 me-4 fw-bold" href="#">Contact US</a>
-                    </li>
+                    </li> -->
                 </ul>
 
             </div>
